Added ethernet detection